# ayto

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ayto.py  conftest.py  demo.ipynb  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-pypi.yaml
ayto/: ayto.py
misc/: s1.py
src/ayto/: __init__.py  ayto.py  utils.py
tests/: test_ayto.py  test_benchmarks.py  test_utils.py
